crates/opencode-cli/tests/snapshots/cli_help_snapshots__providers_list_help.snap
---
source: crates/opencode-cli/tests/cli_help_snapshots.rs
expression: "render_help(&[\"opencode\", \"providers\", \"list\", \"--help\"])"
---
List providers in table or JSON mode

Usage: opencode providers list [OPTIONS]

Options:
      --output <OUTPUT>  Output format: text | json [default: text]
  -h, --help             Print help
