crates/opencode-cli/tests/snapshots/cli_help_snapshots__root_help.snap
---
source: crates/opencode-cli/tests/cli_help_snapshots.rs
expression: "render_help(&[\"opencode\", \"--help\"])"
---
An open source AI coding agent

Usage: opencode [OPTIONS] [COMMAND]

Commands:
  run        Start the interactive TUI (default) or run a one-shot prompt when text is provided
  serve      Start the HTTP API server in headless mode. Bind precedence: CLI > resolved config > defaults [aliases: server]
  prompt     Run a single one-shot prompt and exit
  version    Print version information
  config     Show or edit configuration
  tool       Invoke a built-in tool from the command line
  providers  Inspect configured and available providers
  session    Inspect project sessions for the current working directory
  help       Print this message or the help of the given subcommand(s)

Options:
      --log-level <LOG_LEVEL>  Log level override (trace|debug|info|warn|error) [env: OPENCODE_LOG_LEVEL=] [default: info]
      --log-json               Emit JSON-structured logs
  -h, --help                   Print help
  -V, --version                Print version
